// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Radio Disabled not selected Radio 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 0.5;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-3 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-5 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-5:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px #c3cddf;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-5:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #c3cddf;
  -webkit-transform: translate(5px, 5px) scale(0);
  -moz-transform: translate(5px, 5px) scale(0);
  -ms-transform: translate(5px, 5px) scale(0);
  transform: translate(5px, 5px) scale(0);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-6 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
          data-testid="radio-input"
        >
          <input
            checked={false}
            className="emotion-3"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            required={false}
            type="radio"
            value="on"
          />
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            />
            <span
              className="emotion-6"
            />
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
          data-testid="radio-input"
        >
          <input
            checked={false}
            className="emotion-3"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            required={false}
            type="radio"
            value="on"
          />
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            />
            <span
              className="emotion-6"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Disabled selected Radio 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 0.5;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-2:disabled {
  cursor: default;
}

.emotion-3 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-4 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-4:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px currentColor;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-4:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: currentColor;
  -webkit-transform: translate(5px, 5px) scale(1);
  -moz-transform: translate(5px, 5px) scale(1);
  -ms-transform: translate(5px, 5px) scale(1);
  transform: translate(5px, 5px) scale(1);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-5 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <span
      className="emotion-1"
      data-testid="radio-input"
    >
      <input
        checked={true}
        className="emotion-2"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="emotion-3"
      >
        <span
          className="emotion-4"
        />
        <span
          className="emotion-5"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Not selected Radio  (\`checked === undefined\`) 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-3 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-5 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-5:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px #b7c3d8;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-5:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #b7c3d8;
  -webkit-transform: translate(5px, 5px) scale(0);
  -moz-transform: translate(5px, 5px) scale(0);
  -ms-transform: translate(5px, 5px) scale(0);
  transform: translate(5px, 5px) scale(0);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-6 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
          data-testid="radio-input"
        >
          <input
            checked={false}
            className="emotion-3"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            required={false}
            type="radio"
            value="on"
          />
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            />
            <span
              className="emotion-6"
            />
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
          data-testid="radio-input"
        >
          <input
            checked={false}
            className="emotion-3"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            required={false}
            type="radio"
            value="on"
          />
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            />
            <span
              className="emotion-6"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Not selected Radio (\`checked === false\`) 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-3 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-4 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-5 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-5:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px #b7c3d8;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-5:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #b7c3d8;
  -webkit-transform: translate(5px, 5px) scale(0);
  -moz-transform: translate(5px, 5px) scale(0);
  -ms-transform: translate(5px, 5px) scale(0);
  transform: translate(5px, 5px) scale(0);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-6 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
          data-testid="radio-input"
        >
          <input
            checked={false}
            className="emotion-3"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            required={false}
            type="radio"
            value="on"
          />
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            />
            <span
              className="emotion-6"
            />
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
          data-testid="radio-input"
        >
          <input
            checked={false}
            className="emotion-3"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            required={false}
            type="radio"
            value="on"
          />
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            />
            <span
              className="emotion-6"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Radio Playground 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-2:disabled {
  cursor: default;
}

.emotion-3 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-4 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-4:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px currentColor;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-4:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: currentColor;
  -webkit-transform: translate(5px, 5px) scale(1);
  -moz-transform: translate(5px, 5px) scale(1);
  -ms-transform: translate(5px, 5px) scale(1);
  transform: translate(5px, 5px) scale(1);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-5 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <span
      className="emotion-1"
      data-testid="radio-input"
    >
      <input
        checked={true}
        className="emotion-2"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="emotion-3"
      >
        <span
          className="emotion-4"
        />
        <span
          className="emotion-5"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Radio showcase 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-2:disabled {
  cursor: default;
}

.emotion-3 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-4 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-4:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px #b7c3d8;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-4:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #b7c3d8;
  -webkit-transform: translate(5px, 5px) scale(0);
  -moz-transform: translate(5px, 5px) scale(0);
  -ms-transform: translate(5px, 5px) scale(0);
  transform: translate(5px, 5px) scale(0);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-5 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.emotion-14 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-14:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px currentColor;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-14:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: currentColor;
  -webkit-transform: translate(5px, 5px) scale(1);
  -moz-transform: translate(5px, 5px) scale(1);
  -ms-transform: translate(5px, 5px) scale(1);
  transform: translate(5px, 5px) scale(1);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-16 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 0.5;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-19 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-19:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px #c3cddf;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-19:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #c3cddf;
  -webkit-transform: translate(5px, 5px) scale(0);
  -moz-transform: translate(5px, 5px) scale(0);
  -ms-transform: translate(5px, 5px) scale(0);
  transform: translate(5px, 5px) scale(0);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div>
      <span
        className="emotion-1"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="emotion-2"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="a"
        />
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          />
          <span
            className="emotion-5"
          />
        </span>
      </span>
      <span
        className="emotion-1"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="emotion-2"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="b"
        />
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          />
          <span
            className="emotion-5"
          />
        </span>
      </span>
      <span
        className="emotion-1"
        data-testid="radio-input"
      >
        <input
          checked={true}
          className="emotion-2"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="c"
        />
        <span
          className="emotion-3"
        >
          <span
            className="emotion-14"
          />
          <span
            className="emotion-5"
          />
        </span>
      </span>
      <span
        className="emotion-16"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="emotion-2"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="d"
        />
        <span
          className="emotion-3"
        >
          <span
            className="emotion-19"
          />
          <span
            className="emotion-5"
          />
        </span>
      </span>
      <span
        className="emotion-16"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="emotion-2"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="e"
        />
        <span
          className="emotion-3"
        >
          <span
            className="emotion-19"
          />
          <span
            className="emotion-5"
          />
        </span>
      </span>
      <span
        className="emotion-16"
        data-testid="radio-input"
      >
        <input
          checked={true}
          className="emotion-2"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          required={false}
          type="radio"
          value="g"
        />
        <span
          className="emotion-3"
        >
          <span
            className="emotion-14"
          />
          <span
            className="emotion-5"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Selected Radio 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-2:disabled {
  cursor: default;
}

.emotion-3 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-4 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-4:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px currentColor;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-4:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: currentColor;
  -webkit-transform: translate(5px, 5px) scale(1);
  -moz-transform: translate(5px, 5px) scale(1);
  -ms-transform: translate(5px, 5px) scale(1);
  transform: translate(5px, 5px) scale(1);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-5 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <span
      className="emotion-1"
      data-testid="radio-input"
    >
      <input
        checked={true}
        className="emotion-2"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="emotion-3"
      >
        <span
          className="emotion-4"
        />
        <span
          className="emotion-5"
        />
      </span>
    </span>
  </div>
</div>
`;
